# GraphZeppelin

./: .gitignore  CMakeLists.txt  README.md  commands
bipartite_datasets/: .gitignore  CMakeLists.txt  README.md  convokit_num_users.cpp  convokit_overlap_finder.cpp  convokit_parser.cpp  convokit_upperbound.cpp  corpus_notes.txt  data_cleaner.py  data_parser.cpp  example.txt  example_exe.cpp  reader.cpp
experiments/: README.md  connected_components.sh  minimum_cut.sh  minimum_cut_no_es.sh
figs/: README.md  cpu_gpu_sketch_throughput.py  exhaustive_sketch_sampling.R  minimum_cut_approx_box.py  standalone_hybrid_perf.py  standalone_nonhybrid_perf.py
include/: cc_gpu_sketch_alg.h  cc_sketch_alg.h  cuda_graph.cuh  cuda_kernel.cuh  cuda_stream.h  cuda_xxhash64.cuh  edge_store.h  graph_sketch_driver.h  mc_gpu_sketch_alg.h  mc_sketch_alg.h  mc_standalone_gpu_sketch_alg.h  mc_subgraph.h  sk_gpu_sketch_alg.h  sketch.h  types.h
scripts/: README.md  connected_components.sh  connected_components_repeat.sh  minimum_cut.sh  minimum_cut_approx.sh  minimum_cut_no_es.sh  sys_sketch_throughput.sh  sys_standalone_hybrid.sh  sys_standalone_nonhybrid.sh
src/: cc_gpu_sketch_alg.cpp  cc_sketch_alg.cpp  cuda_kernel.cu  cuda_stream.cpp  edge_store.cpp  mc_gpu_sketch_alg.cpp  mc_sketch_alg.cpp  mc_standalone_gpu_sketch_alg.cpp  mc_subgraph.cpp  sk_gpu_sketch_alg.cpp
src/l0_sampling/: sketch.cpp
test/: cpu_sketch_throughput.cpp  cpu_sketch_throughput_density.cpp  cpu_sketch_throughput_stream.cpp  cuda_stream_test.cu  edge_store_test.cpp  gpu_sketch_test.cu  gpu_sketch_throughput.cu  gpu_sketch_throughput_density.cu  gpu_sketch_throughput_stream.cu  xxhash_test.cu
tools/: cpu_gpu_transfer.cu  cuda_process_stream.cu  cuda_process_stream_repeat.cu  mc_standalone.cu  min_cut.cu  nsys_gpuutil.py  nsys_pcie.py  process_stream.cpp  single_kernel_stream.cu  spanning_forest_extract.cpp
tools/benchmark/: graphcc_bench.cpp
tools/converter/: convert_bipartite_graph.cpp  csv_converter.cpp  edgelist_converter.cpp  metis_converter.cpp
tools/experiment/: BCHMK_Graph.cpp
tools/others/: mincut_count.cpp  mincut_estimator.cpp  stream_shuffler.cpp
tools/single_kernel/: batch.sh  batch_reader.py
tools/standalone/: cpu_adjlist.cpp  cpu_batcher.cpp  cpu_gpu_transfer.cu  gpu_sketch_update.cu
tools/throughput/: cpu_sketch_throughput.cpp  cpu_sketch_throughput_density.cpp  cpu_sketch_throughput_stream.cpp  gpu_sketch_throughput.cu  gpu_sketch_throughput_density.cu  gpu_sketch_throughput_stream.cu
